<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="com.mx.terryrockstar.rebalancedportfolioapp.controller.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/group_dest"
        android:name="com.mx.terryrockstar.rebalancedportfolioapp.controller.GroupsFragment"
        android:label="@string/groups"
        tools:layout="@layout/fragment_groups" />
    <fragment
        android:id="@+id/add_dest"
        android:name="com.mx.terryrockstar.rebalancedportfolioapp.controller.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add" />

</navigation>